	* include/assert.h:  Mark assertion functions as non-returning.
	* arch/*/src/*/up_assert.h:  Mark _up_assert() as non-returning.
	* drivers/mtd/at25.c: When the AT25 device was not available the
	  initialization did not fail like it should. From Petteri Aimonen.
	* fs/fat/fs_configfat.c:  Fix some errors in FAT formatting logic
	  for large devices and for FAT32. From Petteri Aimonen.
	* fs/fat/fs_fat32util.c:  Fix an initialization error found by
	  Petteri Aimonen.  freecount and next freecount initialization were
	  reversed.
	* drivers/mmcsd/mmcsd_spi.c: Some SD cards will appear busy until
	  switched to SPI mode for first time.  Having a pull-up resistor on
	  MISO may avoid this problem, but this patch makes it work also
	  without pull-up.  From Petteri Aimonen.
	* fs/fat/fs_fat32.c: Fix a compilation error when FAT_DMAMEMORY=y. 
	  From Petteri Aimonen.
	* arch/arm/src/stm32/chip/stm32_spi.h: STM32F4 max SPI clock freq is
	  37.5 MHz.  Patch from Petteri Aimonen.
	* arch/arm/src/stm32/stm32_spi.c: Fixes for SPI DMA work on the
	  STM32F4. Includes untested additions for the F1 implementation as
	  well.  From Petteri Aimonen.

6.26 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* drivers/serial/serial.c:  Correct some race conditions when checking
	  for disconnection of a removable serial device.
	* sched/task_posixspawn.c, task_spawn.c, task_spawnparms.c and
	  spawn_internal.h:  Create new interface task_spawn() that is
	  like posix_spawn(), but uses entry point addresses like
	  task_create().
	* Corrected all argv[] arguments. Should be char * const *, not
	  const char **.
	* sched/pthread* and include/nuttx/sched: Move pthread join data
	  and pthread key calculation data into the "task group" structure.
	* sched/atexit.c, on_exit.c, task_exithook.c and include/nuttx/sched.h:
	  Move atexit and on_exit data structure to task group.  These
	  callbacks are only issued now when the final member of the task
	  group exits.
