@@ -4109,7 +4109,11 @@
 	* sched/pthread* and include/nuttx/sched: Move pthread join data
 	  and pthread key calculation data into the "task group" structure.
 	* sched/atexit.c, on_exit.c, task_exithook.c and include/nuttx/sched.h:
-	  Move atexit and on_exit data structure to task group.  These
+	  Move atexit and on_exit data structures to task group.  These
 	  callbacks are only issued now when the final member of the task
 	  group exits.
+	* sched/waitpid.c, task_exithook.c and include/nuttx/sched.h:
+	  Move waitpid data data structures to task group.  Callers of
+	  of waitpid() are now only awakened whent he final thread of the
+	  task group exits.
 
